--- a/main.html
+++ b/main.html
@@ -17,7 +17,7 @@
                 <div class="items-center" style="width: 25%">
                     <ul>
                         <li><a href="main.html" class="h_links ml4_percent"><b>Главная</b></a></li>
-                        <li><a href="main.html" class="h_links ml4_percent">Продукты</a></li>
+                        <li><a href="areas.html" class="h_links ml4_percent">Области</a></li>
                         <li><a href="main.html" class="h_links ml4_percent">Гиды</a></li>
                         <li><a href="main.html" class="h_links ml4_percent">Контакты</a></li>
                     </ul>
