--- a/areas.html
+++ b/areas.html
@@ -32,17 +32,22 @@
     <div class="max_width mrl_auto text_center mt50px content_col">
         <p>Самые популярные места!</p>
         <div class="flex justify-between">
-            <div class="con_font_size_part" style="width: 30%">
-                <div><img src="images/areas_places.jpg" width="100%"></div>
-                <p>Заилийское Алатау</p>
-            </div>
-            <div class="con_font_size_part" style="width: 30%">
-                <div><img src="images/areas_places2.jpg" width="100%"></div>
-                <p>Пик Хан-Тенгри</p>
-            </div>
-            <div class="con_font_size_part" style="width: 30%">
-                <div><img src="images/areas_places3.jpg" width="100%"></div>
-                <p>Озеро Каинды</p>
+            <div class="flex justify-between">
+                <div class="con_font_size_part" style="width: 30%">
+                    <div><img src="images/areas_places.jpg" width="100%"></div>
+                    <p>Заилийское Алатау</p>
+                    <p>(Алматы вроде)</p>
+                </div>
+                <div class="con_font_size_part" style="width: 30%">
+                    <div><img src="images/areas_places2.jpg" width="100%"></div>
+                    <p>Пик Хан-Тенгри</p>
+                    <p>(Алматы вроде)</p>
+                </div>
+                <div class="con_font_size_part" style="width: 30%">
+                    <div><img src="images/areas_places3.jpg" width="100%"></div>
+                    <p>Озеро Каинды</p>
+                    <p>(Алматы вроде)</p>
+                </div>
             </div>
         </div>
         <div class="flex-column items-center">
