--- a/area_products.html
+++ b/area_products.html
@@ -18,7 +18,7 @@
                 <ul>
                     <li><a href="main.html" class="h_links ml4_percent">Главная</a></li>
                     <li><a href="areas.html" class="h_links ml4_percent"><b>Продукты</b></a></li>
-                    <li><a href="main.html" class="h_links ml4_percent">Гиды</a></li>
+                    <li><a href="guides.html" class="h_links ml4_percent">Гиды</a></li>
                     <li><a href="main.html" class="h_links ml4_percent">Контакты</a></li>
                 </ul>
             </div>
